--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,6 +35,18 @@
     <!-- <button id="next-button" class="next-button button"> Next</button> -->
   </div>
 
+  <div id="end-screen" class="hide">
+    <h2>All done!</h2>
+    <p>Your final score is <span id="final-score"></span>.</p>
+    <p>
+      Enter initials: <input type="text" id="initials" max="3" />
+      <button id="submit">Submit</button>
+    </p>
+  </div>
+
+  <div id="feedback" class="feedback hide"></div>
+
+  
   <script src="assets/js/main.js"></script>
 </body>
 
