--- a/Develop/index.html
+++ b/Develop/index.html
@@ -39,14 +39,14 @@
     <h2>All done!</h2>
     <p>Your final score is <span id="final-score"></span>.</p>
     <p>
-      Enter initials: <input type="text" id="initials" max="3" />
+      Enter initials: <input type="text" id="initials"> 
       <button id="submit">Submit</button>
     </p>
   </div>
 
   <div id="feedback" class="feedback hide"></div>
 
-  
+
   <script src="assets/js/main.js"></script>
 </body>
 
