--- a/Develop/quiz.html
+++ b/Develop/quiz.html
@@ -47,7 +47,7 @@
   <div id="feedback" class="feedback hide"></div>
 
 
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/quiz.js"></script>
 </body>
 
 </html>
